--- a/Week 1-2 - general intro to exploratory modelling/assignment 3 - multimodel_assignment.ipynb
+++ b/Week 1-2 - general intro to exploratory modelling/assignment 3 - multimodel_assignment.ipynb
@@ -40,17 +40,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-07T13:56:51.448651Z",
+     "start_time": "2023-04-07T13:56:49.471035Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ewout\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\ema_workbench\\connectors\\__init__.py:19: ImportWarning: vensim connector not available\n",
+      "C:\\Users\\thoma\\Anaconda3\\envs\\model_based_decision_making\\Lib\\site-packages\\ema_workbench\\connectors\\__init__.py:19: ImportWarning: vensim connector not available\n",
       "  warnings.warn(\"vensim connector not available\", ImportWarning)\n",
-      "C:\\Users\\Ewout\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\ema_workbench\\connectors\\__init__.py:34: ImportWarning: simio connector not available\n",
-      "  warnings.warn(\"simio connector not available\", ImportWarning)\n",
-      "C:\\Users\\Ewout\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\ema_workbench\\analysis\\prim.py:30: ImportWarning: altair based interactive inspection not available\n",
-      "  warnings.warn((\"altair based interactive \" \"inspection not available\"), ImportWarning)\n"
+      "C:\\Users\\thoma\\Anaconda3\\envs\\model_based_decision_making\\Lib\\site-packages\\ema_workbench\\connectors\\__init__.py:34: ImportWarning: simio connector not available\n",
+      "  warnings.warn(\"simio connector not available\", ImportWarning)\n"
      ]
     }
    ],
@@ -69,42 +77,38 @@
     "from ema_workbench.em_framework.salib_samplers import MorrisSampler, SobolSampler\n",
     "\n",
     "from ema_workbench.analysis.plotting import lines, Density"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-04-07T13:56:49.471035Z",
-     "end_time": "2023-04-07T13:56:51.448651Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-07T13:56:51.450975Z",
+     "start_time": "2023-04-07T13:56:51.445849Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "# Import the Python function\n",
     "from model.pred_prey import PredPrey"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-04-07T13:56:51.445849Z",
-     "end_time": "2023-04-07T13:56:51.450975Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-07T13:56:51.453653Z",
+     "start_time": "2023-04-07T13:56:51.450975Z"
+    },
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "ExecuteTime": {
-     "start_time": "2023-04-07T13:56:51.450975Z",
-     "end_time": "2023-04-07T13:56:51.453653Z"
     }
    },
    "outputs": [],
@@ -118,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -132,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
