--- a/Week 5-6 - robustness and direct search/assignment 7 - MOEA tutorial.ipynb
+++ b/Week 5-6 - robustness and direct search/assignment 7 - MOEA tutorial.ipynb
@@ -54,7 +54,7 @@
     "                       ScalarOutcome('inertia'),\n",
     "                       ScalarOutcome('reliability', kind=ScalarOutcome.MAXIMIZE)]\n",
     "\n",
-    "lake_model.constantcs = [Constant('alpha', 0.41),\n",
+    "lake_model.constants = [Constant('alpha', 0.41),\n",
     "                         Constant('reps', 150)],"
    ]
   },
@@ -245,6 +245,13 @@
    "source": [
     "with MultiprocessingEvaluator(lake_model) as evaluator:\n",
     "    results = evaluator.optimize(nfe=5000, epsilons=[0.5, 0.5, 0.5, 0.5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hoe zorgt de epsilon value er dan voor dat je uitkomsten meer uit eilkaar liggen? Het is toch gewoon dezelfde uitkomsten, maar dan één per cell. Dus als alle uitkomsten in één cell liggen, krijg je één uitkomst, maa"
    ]
   },
   {
