--- a/Week 5-6 - robustness and direct search/assignment 9 - multi-scenario MORDM.ipynb
+++ b/Week 5-6 - robustness and direct search/assignment 9 - multi-scenario MORDM.ipynb
@@ -14,6 +14,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Verschil met assignment 8 is idd dat je daar pas verschillende uncertainties in scenarios en de invloed daarvan onderzoekt als je de candidate solutions al hebt op basis van één reference scenario, met vaak default waarden. Hier, in assignment 9, zorg je in de search voor candidate solutions al dat je verschillende scenarios into account neemt en op basis van goed presterende solution in al die scenarions de candidates opstelt."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -29,6 +36,13 @@
     "For each of the four selected scenarios, use many-objective optimization to find a pareto approximate set using the same approach as for assignment 8. Remember to check for convergence (and time permitting, seed analysis), and be careful in what epsilon values to use (not to coarse, not too small). \n",
     "\n",
     "Store the resulting set of pareto solutions in a smart way for subsequent analysis.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "De pareto-approximate set is de candidate solution set, toch? En die heb je dan voor elk scenario."
    ]
   },
   {
@@ -85,7 +99,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -99,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
